@@ -116,4 +116,3 @@ DeZog load is working for SNA spectrum files but not for ZX81 .p file as it is n
 
 -Probar si con el cambio de limpiar caché al mover scroll se ha roto algo… ver aventure game map por ejemplo
 
--al pulsar en redimensionado de ventana sensors, se cree que has pulsado en algun sensor, lo mismo sucede con botones scroll
